[gd_scene load_steps=18 format=3 uid="uid://cad8oxbpfuctf"]

[ext_resource type="Script" path="res://Scenes/GUI_UI/PlayerGUI/playerUIScript.gd" id="1_arrvw"]

[sub_resource type="FontVariation" id="FontVariation_oxq5c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o4tsg"]
bg_color = Color(0.337255, 0.584314, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dulj6"]
bg_color = Color(0.4, 0.698039, 0, 0.87451)

[sub_resource type="Animation" id="Animation_3gc3r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HP_Label/HP_Bar:theme_override_styles/background:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.337255, 0.584314, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HP_Label/HP_Bar:theme_override_styles/fill:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.4, 0.698039, 0, 0.87451)]
}

[sub_resource type="Animation" id="Animation_fjc2p"]
resource_name = "green"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HP_Label/HP_Bar:theme_override_styles/background:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.337255, 0.584314, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HP_Label/HP_Bar:theme_override_styles/fill:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.4, 0.698039, 0, 0.87451)]
}

[sub_resource type="Animation" id="Animation_3e6f8"]
resource_name = "red"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HP_Label/HP_Bar:theme_override_styles/background:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.52549, 0.00392157, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HP_Label/HP_Bar:theme_override_styles/fill:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.756863, 0, 0.105882, 0.87451)]
}

[sub_resource type="Animation" id="Animation_qxjqk"]
resource_name = "yellow"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HP_Label/HP_Bar:theme_override_styles/fill:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.615686, 0.611765, 0, 0.87451)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HP_Label/HP_Bar:theme_override_styles/background:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.545098, 0.521569, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b6021"]
_data = {
"RESET": SubResource("Animation_3gc3r"),
"green": SubResource("Animation_fjc2p"),
"red": SubResource("Animation_3e6f8"),
"yellow": SubResource("Animation_qxjqk")
}

[sub_resource type="Animation" id="Animation_ra23y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(22, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_tt46a"]
resource_name = "shakeAnimation"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(30, 24), Vector2(10, 24), Vector2(18, 24), Vector2(17, 24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yjayr"]
_data = {
"RESET": SubResource("Animation_ra23y"),
"shakeAnimation": SubResource("Animation_tt46a")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8d7t8"]
bg_color = Color(0, 0.137255, 0.301961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ivb1"]
bg_color = Color(0.223529, 0.203922, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sfkhu"]
bg_color = Color(0.356863, 0.333333, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ccx2a"]
bg_color = Color(0.760784, 0.666667, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_td5gh"]
size = Vector2(587, 10)

[node name="playerUI" type="Node2D" groups=["barTakenExperience", "gui_Info"]]
script = ExtResource("1_arrvw")

[node name="HudUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="HP_Label" type="Label" parent="HudUI"]
layout_mode = 0
offset_left = 22.0
offset_top = 24.0
offset_right = 234.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_oxq5c")
text = "HP: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HP_Bar" type="ProgressBar" parent="HudUI/HP_Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -13.5
offset_right = 106.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_o4tsg")
theme_override_styles/fill = SubResource("StyleBoxFlat_dulj6")
max_value = 1000.0
show_percentage = false

[node name="turnColor" type="AnimationPlayer" parent="HudUI/HP_Label"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_b6021")
}

[node name="shakeHpBar" type="AnimationPlayer" parent="HudUI/HP_Label"]
libraries = {
"": SubResource("AnimationLibrary_yjayr")
}

[node name="MP_Label" type="Label" parent="HudUI"]
visible = false
layout_mode = 0
offset_left = 17.0
offset_top = 63.0
offset_right = 229.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 13
text = "MP: 120"
horizontal_alignment = 1
vertical_alignment = 2

[node name="PanelEnergiaFondo" type="Panel" parent="HudUI/MP_Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8d7t8")

[node name="PanelEnergiaFrente" type="Panel" parent="HudUI/MP_Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -21.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2ivb1")

[node name="LVL_Label" type="Label" parent="HudUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.0
offset_top = 24.0
offset_right = 24.0
offset_bottom = 76.0
grow_horizontal = 2
text = "LVL: 0"
vertical_alignment = 1

[node name="BackGroundPanel" type="Panel" parent="HudUI/LVL_Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -11.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2

[node name="levelBar" type="ProgressBar" parent="HudUI/LVL_Label"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -295.0
offset_right = 295.0
offset_bottom = 6.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_sfkhu")
theme_override_styles/fill = SubResource("StyleBoxFlat_ccx2a")
max_value = 200.0
show_percentage = false

[node name="takeExperience" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="takeExperience"]
position = Vector2(576.5, 27)
shape = SubResource("RectangleShape2D_td5gh")

[connection signal="area_entered" from="takeExperience" to="." method="_on_take_experience_area_entered"]
